kubernetes/dev/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-easymytrip-deployment
  namespace: dev
  labels:
    app: easymytrip
    env: dev
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 100%
    type: RollingUpdate
  selector:
    matchLabels:
      app: easymytrip
      env: dev
  template:
    metadata:
      labels:
        app: easymytrip
        env: dev
    spec:
      containers:
        - name: easymytrip
          image: 533267238276.dkr.ecr.ap-south-1.amazonaws.com/easymytrip:latest
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 8080
              name: api
          volumeMounts:
            - mountPath: /app/config
              name: application-config
      volumes:
        - name: application-config
          configMap:
            name: dev-easymytrip-application-config
